# advent-of-code-2022

./: pyproject.toml
Day 01/: day 1.py
Day 02/: day 2.py
Day 03/: day 03.py
Day 04/: day 4.py
Day 05/: day 5.py
Day 06/: day 6.py
Day 07/: day 7.py
Day 08/: day 8.py
Day 09/: day 9.py
