[tool.poetry]
name = "adventofcode2022"
version = "0.1.0"
description = ""
authors = ["dmeuwissen <derekmeuwissen@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
numpy = "^1.23.5"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

